plugins {
    id "dev.architectury.loom" version "1.9-SNAPSHOT" apply false
    id "architectury-plugin" version "3.4-SNAPSHOT"
    id "com.github.johnrengelman.shadow" version "8.1.1" apply false
}

ext {
    getVersionSuffix = {
        String versionSuffix = ""
        if (System.getenv("BUILD_RELEASE") != "true") {
            String buildNumber = System.getenv("BUILD_ID")
            versionSuffix += buildNumber != null ? ("+build." + buildNumber) : "+snapshot"
        }
        return versionSuffix
    }
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    group = rootProject.maven_group
    version = rootProject.mod_version
}

subprojects {
    apply plugin: "dev.architectury.loom"
    apply plugin: "architectury-plugin"
    apply plugin: "maven-publish"

    repositories {
        mavenLocal()
        maven {
            name "CjsahMaven"
            url "https://server.cjsah.net:1002/maven/"
        }
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
        mappings loom.officialMojangMappings()

        implementation("io.github.skydynamic:incremental-storage-lib:1.1.0")
        implementation("org.jetbrains.exposed:exposed-core:0.57.0")
        implementation("org.jetbrains.exposed:exposed-jdbc:0.57.0")
        implementation("com.h2database:h2:2.2.224")

        // lombok
        compileOnly("org.projectlombok:lombok:1.18.30")
        annotationProcessor("org.projectlombok:lombok:1.18.30")
    }

    String versionSuffix = project.getVersionSuffix()

    String fullModVersion = project.mod_version + versionSuffix

    version = fullModVersion
    group = project.maven_group
    archivesBaseName = project.archives_name + "-mc" + project.minecraft_version + "-$project.name".replace("${mod_id}-", "")

    loom {
        accessWidenerPath = project(":${mod_id}-common").file("src/main/resources/qbm.accesswidener")
    }

    java {
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }

    beforeEvaluate {
        tasks.register('cleanBuildLibs') {
            doFirst {
                def libsDir = project.projectDir.toPath().resolve("build/libs").toFile()
                if (libsDir.exists()) {
                    libsDir.listFiles().each { file ->
                        file.delete()
                    }
                }
            }
        }

        tasks.build.dependsOn(cleanBuildLibs)
        tasks.remapJar.dependsOn(cleanBuildLibs)
    }

    afterEvaluate {
        def targetLibsDir = rootProject.file("build/libs")

        if (!targetLibsDir.exists()) {
            targetLibsDir.mkdirs()
        }

        tasks.register('copyJarsToRootLibs') {
            if (project.name.contains("neoforge") || project.name.contains("fabric")) {
                doLast {
                    def sourceLibsDir = project.projectDir.toPath().resolve("build/libs").toFile()
                    if (sourceLibsDir.exists()) {
                        sourceLibsDir.listFiles().each { file ->
                            if (file.name.endsWith('.jar')
                                    && !file.name.contains('dev')
                                    && !file.name.contains('source')) {
                                ant.copy(file: file, todir: targetLibsDir)
                            }
                        }
                    }
                }
            }
        }

        tasks.build.finalizedBy(copyJarsToRootLibs)
        tasks.remapJar.finalizedBy(copyJarsToRootLibs)
    }
}
